--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,8 @@ android {
         applicationId "lk.mobilevisions.kiki"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 167
-        versionName "1.0.167"
+        versionCode 169
+        versionName "1.0.169"
         vectorDrawables.useSupportLibrary = true
         renderscriptTargetApi 20
         renderscriptSupportModeEnabled true
@@ -101,6 +101,14 @@ android {
             buildConfigField "String", "MOBILE_PAYMENT_GATEWAY_NAME", "\"STAGING_MOBILE_PAYMENT_GATEWAY_URL\""
             buildConfigField "String", "ALL_USERS_TOPIC_NAME", "\"StagingAllUsers\""
         }
+
+        alpha {
+            buildConfigField "Integer", "MAIN_SERVER_API_VERSION", "3"
+            buildConfigField "String", "MAIN_SERVER_API_NAME", "\"MAIN_SERVER_API_V_\""
+            buildConfigField "String", "MOBILE_PAYMENT_GATEWAY_NAME", "\"MOBILE_PAYMENT_GATEWAY_URL_V3\""
+            buildConfigField "String", "ALL_USERS_TOPIC_NAME", "\"AllUsers\""
+        }
+
     }
 
     dataBinding {
@@ -144,6 +152,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.1.2'
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.facebook.android:facebook-android-sdk:5.11.0'
+    implementation 'com.facebook.android:facebook-marketing:4.42.0'
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.google.dagger:dagger:2.15'
