--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:host="app.kiki.lk" android:scheme="http"/>
-                <data android:host="app.kiki.lk" android:scheme="https"/>
+                <data android:host="app.kiki.lk" android:scheme="https" android:pathPrefix="/redirect/launch"/>
             </intent-filter>
         </activity> <!-- <activity -->
         <!-- android:name=".audio.activity.AudioDashboardActivity" -->
@@ -123,6 +123,7 @@
             android:name=".audio.activity.AudioDashboardActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -135,6 +136,14 @@
                 <data android:mimeType="application/x-ogg" />
                 <data android:mimeType="application/itunes" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:host="app.kiki.lk" android:scheme="http"/>
+                <data android:host="app.kiki.lk" android:scheme="https" android:pathPrefix="/redirect/audio"/>
+            </intent-filter>
+
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -261,8 +270,17 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".video.activity.VideoDashboardActivity"
+            android:launchMode="singleTask"
             android:label=""
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait">
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:host="app.kiki.lk" android:scheme="http"/>
+            <data android:host="app.kiki.lk" android:scheme="https" android:pathPrefix="/redirect/video"/>
+        </intent-filter>
+        </activity>
         <activity
             android:name=".ui.subscribed.SubscriptionActivity"
             android:label="All Subscribed Programs"
