--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,10 +96,7 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeFullScreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -107,7 +104,30 @@
                 <data android:host="app.kiki.lk" android:scheme="http"/>
                 <data android:host="app.kiki.lk" android:scheme="https" android:pathPrefix="/redirect"/>
             </intent-filter>
-        </activity> <!-- <activity -->
+        </activity>
+        <activity-alias android:label="KiKi"
+            android:icon="@mipmap/ic_launcher"
+            android:name=".MainActivityIcon"
+            android:enabled="true"
+            android:targetActivity=".ui.splash.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
+        <activity-alias android:label="KiKi"
+            android:icon="@mipmap/ic_launcher_xmas"
+            android:name=".MainActivityIconX"
+            android:enabled="false"
+            android:targetActivity=".ui.splash.SplashActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
+        <!-- <activity -->
         <!-- android:name=".audio.activity.AudioDashboardActivity" -->
         <!-- android:configChanges="orientation" -->
         <!-- android:label="@string/app_name" -->
@@ -331,12 +351,6 @@
             </intent-filter>
         </receiver>
 
-        <meta-data
-            android:name="firebase_crashlytics_collection_enabled"
-            android:value="false" />
-        <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="df4f6a9d4343554d3f798d7a771e03c47c1b836d" />
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@mipmap/ic_launcher" />
