--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ buildscript {
         jcenter()
         mavenCentral()
         google()
-        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
 //        classpath 'com.android.tools.build:gradle:3.2.1'
@@ -14,8 +13,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-        classpath 'io.fabric.tools:gradle:1.25.4'
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.2.0'
         classpath 'com.jakewharton.sdkmanager:gradle-plugin:0.10.+'
 
 
@@ -31,7 +29,6 @@ allprojects {
         maven { url "https://jitpack.io" }
         maven { url 'http://dl.bintray.com/amulyakhare/maven' }
         google()
-        maven { url 'https://maven.fabric.io/public' }
 
     }
 }
