--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -275,7 +275,9 @@
         <activity
             android:name=".chat.ChatActivity"
             android:screenOrientation="portrait" />
-
+        <activity
+            android:name=".chat.ChatInfoActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".video.activity.ContactActivity"
             android:screenOrientation="portrait" />
